--- a/OIBSIP-main/TASK 1/classify.ipynb
+++ b/OIBSIP-main/TASK 1/classify.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "## TASK 1\n",
     "\n",
-    "### DHRUPAD CHAKRABORTY\n",
+    "### SUNKARA MOHAN MUKUND SAI\n",
     "\n",
     "#### IRIS FLOWER CLASSIFICATION"
    ]
